--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   <script>
     try {
       var typed = new Typed("#subtitle", {
-        strings: ['welcome to leijingyang boke', '愿你一生努力，一生被爱', '想要的都拥有，得不到的都释怀'],
+        strings: ['welcome to lei’s web', '愿你一生努力，一生被爱', '想要的都拥有，得不到的都释怀'],
         startDelay: 0,
         typeSpeed: 200,
         loop: true,
